// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checked toggle input a11y: toMatchA11ySnapshot 1`] = `
"role: WebArea
children:
  -
    role: Label
    children:
      -
        role: checkbox
        name: test
        checked: true
      -
        role: GenericContainer
"
`;

exports[`default toggle input a11y: toMatchA11ySnapshot 1`] = `
"role: WebArea
children:
  -
    role: Label
    children:
      -
        role: checkbox
        name: test
        checked: false
      -
        role: GenericContainer
"
`;
